@@ -1,41 +1,46 @@
 package amos.specitemdatabase.controller;
 
 import amos.specitemdatabase.model.Commit;
-
 import amos.specitemdatabase.model.CompareResult;
 import amos.specitemdatabase.model.CompareResultMarkup;
-
 import amos.specitemdatabase.model.SpecItem;
 import amos.specitemdatabase.model.SpecItemBuilder;
-import amos.specitemdatabase.repo.SpecItemRepo;
 import amos.specitemdatabase.service.FileStorageService;
 import amos.specitemdatabase.service.SpecItemService;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.FileSystemException;
+import java.time.LocalDateTime;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import lombok.extern.slf4j.Slf4j;
+import org.json.JSONException;
+import org.json.JSONObject;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.util.Pair;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
-
-import java.time.LocalDateTime;
-import java.util.*;
-
-import java.nio.file.FileSystemException;
-
-import org.json.JSONObject;
-
-import java.io.UnsupportedEncodingException;
-import java.net.URLDecoder;
 
 @RestController
 @CrossOrigin("*")
+@Slf4j
 public class Controller {
 
     private final FileStorageService fileStorageService;
     private final SpecItemService service;
-    @Autowired
-    private SpecItemRepo specItemRepo;
+
     @Autowired
     public Controller(SpecItemService service, FileStorageService fileStorageService) {
         this.service = service;
@@ -47,32 +52,30 @@ public class Controller {
             System.err.println(e.getMessage());
     }
 
-    private <T> ResponseEntity<T> handleStatusCode400(Exception e, Class<T> type) {
+    private <T> ResponseEntity<T> handleStatusCode400(Exception e) {
         printErrorMessage(e);
         return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
     }
 
-    private <T> ResponseEntity<T> handleStatusCode404(Exception e, Class<T> type) {
+    private <T> ResponseEntity<T> handleStatusCode404(Exception e) {
         printErrorMessage(e);
         return new ResponseEntity<>(HttpStatus.NOT_FOUND);
     }
 
-    private <T> ResponseEntity<T> handleStatusCode500(Exception e, Class<T> type) {
+    private <T> ResponseEntity<T> handleStatusCode500(Exception e) {
         printErrorMessage(e);
         return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
     }
 
     private ResponseEntity<SpecItem> returnSpecItemAndStatusCode(Optional<SpecItem> specItem) {
         try {
-            if (specItem.isPresent()) {
-                return new ResponseEntity<>(specItem.get(), HttpStatus.OK);
-            }
-            return new ResponseEntity<>(null, HttpStatus.OK);
+            return specItem.map(item -> new ResponseEntity<>(item, HttpStatus.OK))
+                .orElseGet(() -> new ResponseEntity<>(null, HttpStatus.OK));
         } catch (Exception e) {
-            return handleStatusCode500(e, SpecItem.class);
+            return handleStatusCode500(e);
         }
     }
-    
+
     @SuppressWarnings("unchecked")
     private ResponseEntity<List<SpecItem>> returnListOfSpecItemAndStatusCode(Optional<List<SpecItem>> listOfSpecItems) {
         try {
@@ -80,9 +83,9 @@ public class Controller {
                 List<SpecItem> list = listOfSpecItems.get();
                 return new ResponseEntity<>(listOfSpecItems.get(), HttpStatus.OK);
             }
-            return handleStatusCode404(null, (Class<List<SpecItem>>) (Class<?>) List.class);
+            return handleStatusCode404(null);
         } catch (Exception e) {
-            return handleStatusCode404(null, (Class<List<SpecItem>>) (Class<?>) List.class);
+            return handleStatusCode404(null);
         }
     }
 
@@ -92,34 +95,66 @@ public class Controller {
             urlWithSpecialCharacters = urlWithSpecialCharacters.replaceAll("%(?![0-9a-fA-F]{2})", "%25");
             urlWithSpecialCharacters = urlWithSpecialCharacters.replaceAll("\\+", "%2B");
 
-            decodedURL = URLDecoder.decode(urlWithSpecialCharacters, "utf-8");
-        } catch (UnsupportedEncodingException e) {
-            System.err.println(e.getMessage());
-			return decodedURL;
+            decodedURL = URLDecoder.decode(urlWithSpecialCharacters, StandardCharsets.UTF_8);
         } catch (Exception e) {
             System.err.println(e.getMessage());
         }
-        return decodedURL;			
+        return decodedURL;
     }
 
     /***
      * update the tags of a specitem, response status code 201 if successful
-     * @param tags name of the document
+     * @param specItemAsJsonString name of the document
      */
     @PostMapping(path = "post/tags", consumes = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<String> updateTags (@RequestBody String tags){
-        //saving content to a file in /tmp folder
-        System.out.println("Get a POST Request");
-
-        //saving document to database
+    public ResponseEntity<String> updateTags(@RequestBody final String specItemAsJsonString){
+        log.info("Received a request for updating the tags.");
         try {
-            service.updateTags(tags);
+            // Step 1: Create a spec item out of the json representation
+            final Pair<SpecItem, String> specItemTagPair = this.extractSpecItemAndTagOutOfJsonRepresentation(specItemAsJsonString);
+            // Step 2: Complete the tag addition procedure, which involves
+            // 1. fetching current tags for ID & Time
+            // 2. saving the previous + new tags
+            // 3. creating a new spec item and a new taginfo entry
+            this.service.completeTagAdditionProcess(specItemTagPair.getFirst(),
+                Collections.singletonList(specItemTagPair.getSecond()));
         } catch (Exception e) {
             e.printStackTrace();
             return new ResponseEntity<>(e.getMessage(), HttpStatus.BAD_REQUEST);
         }
-        System.out.println("Upload Successful!");
-        return new ResponseEntity<>("Upload Successful!", HttpStatus.CREATED);
+        log.info("Tags have been added successfully!");
+        return new ResponseEntity<>("Tags have been added successfully!", HttpStatus.CREATED);
+    }
+
+    private Pair<SpecItem, String> extractSpecItemAndTagOutOfJsonRepresentation(final String specItemAsJsonString) throws JSONException {
+        // Create a json object from the json string representation of a spec item
+        // and get the spec item out of it
+        final JSONObject json = new JSONObject(specItemAsJsonString);
+        // create Specitem Builder and fill it with attributes
+        final SpecItemBuilder sb = new SpecItemBuilder();
+        sb.fromStringRepresentation(json.getString("fingerprint"), json.getString("shortname"),json.getString("category"),
+            json.getString("lcStatus"),json.getString("longname"),json.getString("content"));
+        sb.setTraceRefs(json.getString("traceref").substring(1,json.getString("traceref").length()-1));
+
+        final String[] dateParts = json.getString("commitTime")
+            .replace("[", "").replace("]", "").split(",");
+        int year = Integer.parseInt(dateParts[0]);
+        int month = Integer.parseInt(dateParts[1]);
+        int day = Integer.parseInt(dateParts[2]);
+        int hour = Integer.parseInt(dateParts[3]);
+        int minute = Integer.parseInt(dateParts[4]);
+        int second = Integer.parseInt(dateParts[5]);
+        final LocalDateTime dateTime = LocalDateTime.of(year, month, day, hour, minute, second);
+
+        final Commit c = new Commit(json.getString("commitHash"),json.getString("commitMsg"),
+            dateTime,json.getString("commitAuthor"));
+        sb.setCommit(c);
+
+        final SpecItem specItem = new SpecItem(sb);
+        final String tagList = json.getString("tagList");
+
+        // TODO: frontend must provide the info about the creation time
+        return Pair.of(specItem, tagList);
     }
 
     
@@ -135,10 +170,10 @@ public class Controller {
             return new ResponseEntity<>(HttpStatus.CREATED);
 
         } catch (FileSystemException e) {
-            return handleStatusCode500(e, String.class);
+            return handleStatusCode500(e);
             
         } catch (Exception e) {
-            return handleStatusCode400(e, String.class);
+            return handleStatusCode400(e);
         }
     }
 
@@ -153,7 +188,7 @@ public class Controller {
             service.deleteSpecItemById(specItemId);
             return new ResponseEntity<>(HttpStatus.OK);
         } catch (Exception e) {
-            return handleStatusCode400(e, String.class);
+            return handleStatusCode400(e);
         }
     }
 
@@ -177,7 +212,7 @@ public class Controller {
     }
 
     @GetMapping("/get/cont:{content}")
-    public ResponseEntity<List<SpecItem>> getSpecItemByContent(@PathVariable(value = "content") String content, @RequestParam(defaultValue = "1") int page) throws UnsupportedEncodingException {
+    public ResponseEntity<List<SpecItem>> getSpecItemByContent(@PathVariable(value = "content") String content, @RequestParam(defaultValue = "1") int page) {
 		content = getDecodedURLWithoutSpecialCharacters(content);
         Optional<List<SpecItem>> listOfSpecItems = Optional.ofNullable(service.getListOfSpecItemsByContent(content, page));
         return returnListOfSpecItemAndStatusCode(listOfSpecItems);
@@ -197,9 +232,9 @@ public class Controller {
         int pageNumber = service.getPageNumber();
         return new ResponseEntity<>(pageNumber, HttpStatus.OK);
     }
-    
+
     @GetMapping("/get/pageNumber/{specitem}")
-    public ResponseEntity<Integer> getPageNumberOfSpecItem(@PathVariable(value = "specitem")String specitem) {	
+    public ResponseEntity<Integer> getPageNumberOfSpecItem(@PathVariable(value = "specitem")String specitem) {
     	for (int i = 1; i <= service.getPageNumber(); i++) {
     		List<SpecItem> listOfSpecItems = service.getAllSpecItems(i);
     		for(SpecItem s : listOfSpecItems) {
